fix: remove align-items center

--- a/static/global.css
+++ b/static/global.css
@@ -486,7 +486,7 @@ img {
 .flex {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .story-content {
